--- a/frontend/index.html
+++ b/frontend/index.html
@@ -164,7 +164,7 @@
 </div>
 
 <script>
-const API_BASE = "http://127.0.0.1:8000";
+const API_BASE = "https://chat-6-24fr.onrender.com";
 let token = localStorage.getItem("token");
 let username = localStorage.getItem("username");
 
